# rehuco

./: .gitignore  .ignore  404.html  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  conftest.py  coverage_platform.py  cspell.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.json
.github/workflows/: canary-rehuco-node.yml  node-canary.yml  publish-docs.yml  qa.yml
apps/rehuco-agent/: pyproject.toml
apps/rehuco-agent/launcher/: CMakeLists.txt  README.md  launcher.c  launcher.rc.in
apps/rehuco-agent/src/rehuco_agent/: __init__.py  __main__.py  app.py  docks_menu_entry.py  document_session_settings.py  document_widget.py  documents_dock.py  glyphs.py  main.qrc  main_window.py  main_window.ui  rehu_document_model.py  unsaved_changes_dialog.py  viewer_window.py  viewer_window.ui  windows_registration.py
apps/rehuco-agent/src/rehuco_agent/core/: __init__.py  application_singleton.py
apps/rehuco-agent/src/rehuco_agent/dialogs/: __init__.py  settings_dialog.py  settings_dialog.ui  settings_page.py  unsaved_changes_dialog.py
apps/rehuco-agent/src/rehuco_agent/dialogs/settings_pages/: __init__.py  markdown_rendering_page.py  registry_page.py  registry_page.ui
apps/rehuco-agent/src/rehuco_agent/documents/: __init__.py  document_fields.py  document_widget.py  documents_dock.py  image_scanner.py  name_suggestion_model.py  rehu_document_menu_entry.py  rehu_document_model.py  source_views.py
apps/rehuco-agent/src/rehuco_agent/fields/: __init__.py  authors_field.py  boolean_field.py  colors.py  date_field.py  description_field.py  duration_field.py  field.py  field_registry.py  fields_form.py  file_size_field.py  images_field.py  int_field.py  multiple_choice_field.py  path_field.py  rating_field.py  text_field.py  text_list_field.py  text_list_string.py  type_field.py  unknown_field.py  url_field.py
apps/rehuco-agent/src/rehuco_agent/fields/widgets/: __init__.py  choice_check_boxes.py  date_edit.py  duration_edit.py  expand_toggle_button.py  file_size_edit.py  image_selector.py  image_strip.py  line_edit.py  markdown_edit.py  markdown_view.py  path_editor.py  rating_slider.py  single_choice_combo_box.py  type_badge.py
apps/rehuco-agent/src/rehuco_agent/settings/: __init__.py  document_session_settings.py  identity_settings.py  main_window_settings.py  markdown_rendering_settings.py  persistent_settings.py  settings_dialog_settings.py  theme_settings.py  unsaved_changes_dialog_settings.py  window_settings.py
apps/rehuco-agent/src/rehuco_agent/settings/ui/: descriptions_page.py  identity_page.py  identity_page.ui  markdown_rendering_page.py  markdown_rendering_page.ui  registry_page.py  settings_dialog.py  settings_dialog.ui
apps/rehuco-agent/src/rehuco_agent/widgets/: __init__.py  qtads_utils.py
apps/rehuco-agent/tests/: conftest.py  test_app.py  test_application_singleton.py  test_document_session_settings.py  test_document_widget.py  test_documents_dock.py  test_main.py  test_main_window.py  test_rehu_document_model.py  test_settings.py  test_unsaved_changes_dialog.py  test_viewer_window.py  test_window_settings.py
apps/rehuco-agent/tests/data/: core-type-is-format-version.rehu  corrupted.rehu  foo.rehu  format-version-as-block.rehu  newer-plugin-block-version.rehu  reserved-keys-misused.rehu  unclaimed-foreign-blocks.rehu
apps/rehuco-agent/tests/data/collection-sculpting-series/: info.rehu
apps/rehuco-agent/tests/data/tutorial-sculpting/: info.rehu
apps/rehuco-agent/tests/dialogs/: test_settings_dialog.py  test_unsaved_changes_dialog.py
apps/rehuco-agent/tests/dialogs/settings_pages/: test_markdown_rendering_page.py  test_registry_page.py
apps/rehuco-agent/tests/documents/: test_document_fields.py  test_document_widget.py  test_documents_dock.py  test_image_scanner.py  test_name_suggestion_model.py  test_rehu_document_model.py  test_source_views.py
apps/rehuco-agent/tests/fields/: conftest.py  field_testers.py  test_authors_field.py  test_boolean_field.py  test_date_field.py  test_description_field.py  test_duration_field.py  test_field.py  test_field_registry.py  test_fields_form.py  test_file_size_field.py  test_images_field.py  test_init.py  test_int_field.py  test_multiple_choice_field.py  test_path_field.py  test_rating_field.py  test_text_field.py  test_text_list_field.py  test_type_field.py  test_unknown_field.py  test_url_field.py
apps/rehuco-agent/tests/fields/widgets/: test_choice_check_boxes.py  test_date_edit.py  test_duration_edit.py  test_expand_toggle_button.py  test_file_size_edit.py  test_image_selector.py  test_image_strip.py  test_line_edit.py  test_markdown_edit.py  test_markdown_view.py  test_path_editor.py  test_rating_slider.py  test_type_badge.py
apps/rehuco-agent/tests/settings/: test_document_session_settings.py  test_identity_settings.py  test_main_window_settings.py  test_markdown_rendering_settings.py  test_persistent_settings.py  test_recent_files_settings.py  test_settings_dialog_settings.py  test_unsaved_changes_dialog_settings.py  test_window_settings.py
apps/rehuco-agent/tests/settings/ui/: test_identity_page.py  test_markdown_rendering_page.py  test_registry_page.py  test_settings_dialog.py  test_settings_frame_filter.py
apps/rehuco-agent/tests/widgets/: test_qtads_utils.py
apps/rehuco-node/: LICENSE  README.md  pyproject.toml
apps/rehuco-node/tests/: conftest.py
ci/: canary-rehuco-node.sh  node-canary.sh
design/icons/: README.md  (+1 more)
docs/: index.md  packages.md
search/: search_index.json
specs/: index.html
spikes/macos-file-assoc-identity/: .gitignore  README.md  pyproject.toml
spikes/macos-file-assoc-identity/src/spike/: __main__.py  app.py
spikes/win-file-assoc-identity/: .gitignore  README.md  main.py  pyproject.toml  registry.py  resources.qrc
spikes/win-file-assoc-identity/launcher/: CMakeLists.txt  config.h.in  launcher.c  launcher.rc.in
spikes/win-file-assoc-identity/src/spike/: __main__.py  app.py  briefcase_app.py  registry.py  resources_rc.py
stylesheets/: extra.css
tools/: check_slug_refs.py  mkdocs_relative_link_hook.py  mkdocs_slug_ref_hook.py
(+101 files in other folders)
