[project]
name = "rehuco-node"
dynamic = ["version"]
description = "rehuco headless REST node"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Ioan Calin", email = "iborco@gmail.com" },
]
keywords = ["rehuco", "resource-management", "fastapi", "rest"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.14"
dependencies = [
    "rehuco-core",
    "cryptography",
    "fastapi",
    "pydantic",
    "uvicorn[standard]",
    "zeroconf",
]

[project.urls]
Homepage = "https://borco.github.io/rehuco/"
Repository = "https://github.com/borco/rehuco/tree/master/apps/rehuco-node"
Issues = "https://github.com/borco/rehuco/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/rehuco_node/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/rehuco_node"]

[tool.uv.sources]
rehuco-core = { workspace = true }
