[project]
name = "rehuco-spike-macos-assoc"
version = "0.0.0"
description = "Throwaway spike for rehuco issue #13 — macOS .app/QFileOpenEvent file association"
# Private :: Do Not Upload causes PyPI to reject the package on any upload attempt.
classifiers = ["Private :: Do Not Upload"]
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "borco-pyside",
    "PySide6>=6.9",
]

[project.scripts]
rehuco-spike = "spike.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spike"]

# ---------------------------------------------------------------------------
# Briefcase — issue #13: does a Briefcase .app bundle register .rehuspike as a
# document type and deliver double-clicks via QFileOpenEvent to a single instance?
# ---------------------------------------------------------------------------
# Build:   briefcase build macOS
# Run:     briefcase run macOS
# Iterate: briefcase update macOS   (fast; re-syncs src/ into the bundle)
# ---------------------------------------------------------------------------

[tool.briefcase]
project_name = "Rehuco Spike"
bundle = "com.borco.rehuco"
version = "0.0.0"
url = "https://github.com/borco/rehuco"
license = "MIT"
author = "Ioan Calin"
author_email = "iborco@gmail.com"

[tool.briefcase.app.spike]
formal_name = "Rehuco Spike"
description = "Briefcase test for rehuco issue #13 — macOS file association + QFileOpenEvent"
sources = ["src/spike"]
main_module = "spike"
# borco-core/borco-pyside aren't on PyPI yet (§16.3); installed from the workspace path.
requires = ["PySide6>=6.9", "../../packages/borco-core", "../../packages/borco-pyside"]
# Looks for rehuco-spike.icns in the project root.
icon = "rehuco-spike"

[tool.briefcase.app.spike.document_type.rehuspike]
description = "Rehuco Spike File"
extension = "rehuspike"
icon = "rehuco-spike"
url = "https://github.com/borco/rehuco"
mime_type = "application/x-rehuco-spike"

[tool.briefcase.app.spike.macOS]
requires = ["std-nslog~=2.0.0"]
# PySide6's macOS wheel is macosx_13_0_universal2; Briefcase's 11.0 default is too low.
min_os_version = "13.0"
