[project]
name = "rehuco-spike-win-assoc"
version = "0.0.0"
description = "Throwaway spike for rehuco issue #1 — Windows ProgID/AUMID"
# Private :: Do Not Upload causes PyPI to reject the package on any upload attempt.
classifiers = ["Private :: Do Not Upload"]
license-files = ["LICENSE"]
requires-python = ">=3.14"
dependencies = [
    "borco-pyside",
    "PySide6>=6.9",
]

[project.scripts]
rehuco-spike = "spike.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spike"]

# ---------------------------------------------------------------------------
# Briefcase — spike Q6b: does a proper packaged exe fix pin identity?
# ---------------------------------------------------------------------------
# Build:   briefcase build windows    (one-time; downloads Python + PySide6)
# Iterate: briefcase update windows   (fast; re-syncs src/ into the bundle)
# The launcher exe stays unchanged between updates — only app code changes.
# ---------------------------------------------------------------------------

[tool.briefcase]
project_name = "Rehuco Spike"
bundle = "com.borco.rehuco"
version = "0.0.0"
url = "https://github.com/borco/rehuco"
license = "MIT"
author = "Ioan Calin"
author_email = "iborco@gmail.com"

[tool.briefcase.app.spike]
formal_name = "Rehuco Spike"
description = "Briefcase test for rehuco issue #1 — Windows pin identity"
sources = ["src/spike"]
main_module = "spike"
requires = ["PySide6>=6.9"]
# Looks for rehuco-spike.ico in the project root (generated by magick, gitignored).
icon = "rehuco-spike"
